[tool.poetry]
name = "org-roam-canvas"
version = "1.0.0"
description = ""
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]
readme = "README.md"
# need the following because name and package differ wrt - and _
# https://python-poetry.org/docs/basic-usage/#project-setup
packages = [{include = "org_roam_canvas"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
beautifulsoup4 = "^4.12.2"
greenlet = "^2.0.2"

# only required for org-roam-canvas, not for org-roam-server
#sqlmodel = "^0.0.8"
#aiosqlite = "^0.19.0"
#httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
# will pipx be able to pick this up?
orserve = "org_roam_canvas.orserve:run"
orserve_dev = "org_roam_canvas.orserve:run_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
